--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^15.0.2",
     "react-native": "^0.26.2",
+    "react-native-modalbox": "^1.3.3",
     "react-native-navbar": "^1.5.0"
   }
 }
